cleanup of service files

--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -1,13 +1,27 @@
 - name: Create service target
   template: src=target.j2 dest=/etc/systemd/system/{{ service_name }}.target mode=644
-  register: target_file
+  when: service_enabled
+  register: service_target
 
-- name: Enable target
+- name: Reload systemd
+  command: systemctl daemon-reload
+  when: service_target.changed
+
+- name: Check if target file is present
+  stat: path=/etc/systemd/system/{{ service_name }}.target
+  register: service_target
+
+- name: Enable or disable target
   service: name={{ service_name }}.target enabled={{ service_enabled }}
+  when: service_target.stat.exists
+
+- name: Remove unwanted target file
+  file: path=/etc/systemd/system/{{ service_name }}.target state=absent
+  when: not service_enabled
 
 - name: Create service units
   template: src=unit.j2 dest=/etc/systemd/system/{{ item.name }}{% if item.instances|default(False) %}@{% endif %}.service mode=644
-  register: unit_files
+  when: service_enabled
   with_items: "{{ service_units }}"
 
 - name: Enable and start unit service instances
@@ -16,11 +30,17 @@
     - "{{ service_units }}"
     - instances
     - { skip_missing: True }
+  when: service_target.stat.exists
   notify: reload services
 
 - name: Enable and start single units
   service: name={{ item.name }}  state={{ 'stopped' if service_enabled else 'stopped'}} enabled={{ service_enabled }}
   with_items:
     - "{{ service_units }}"
-  when: item.instances is not defined
+  when: item.instances is not defined and service_target.stat.exists
   notify: reload services
+
+- name: Remove unwanted units
+  file: path=/etc/systemd/system/{{ item.name }}{% if item.instances|default(False) %}@{% endif %}.service state=absent
+  when: not service_enabled
+  with_items: "{{ service_units }}"
